--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="card">
         <img src="" alt="car" style="width:100%">
         <div class="container">
-          <h4><b>John Doe</b></h4> 
-          <p>Architect & Engineer</p> 
+          <h4><b>{name}</b></h4> 
+          <p></p> 
         </div>
       </div>
     
